feat: dutch language improvements

--- a/translations/nl.csv
+++ b/translations/nl.csv
@@ -47,12 +47,12 @@ Account,Rekening,
 "Account Type","Rekening Type",
 Accounting,Boekhouding,
 "Accounting Entries","Boekhoudgegevens",
-"Accounting Ledger Entry","Boekhoudkundige Grootboekinvoer",
+"Accounting Ledger Entry","Grootboekboeking",
 "Accounting Settings","Boekhoud Instellingen",
 Accounts,Rekeningen,
 "Accounts Payable","Crediteuren",
 "Accounts Receivable","Debiteuren",
-"Accumulated Depreciation","Gecumuleerde Afschrijvingen",
+"Accumulated Depreciation","Opgebouwde Afschrijvingen",
 Action,Actie,
 Active,Actief,
 "Add Account","Rekening Toevoegen",
@@ -62,13 +62,13 @@ Active,Actief,
 "Add Row","Rij Toevoegen",
 "Add Suppliers","Leveranciers Toevoegen",
 "Add Taxes","Belastingen Toevoegen",
-"Add a few customers to create your first sales invoice","Voeg een paar klanten toe om je eerste verkoopfactuur te maken",
-"Add a few suppliers to create your first purchase invoice","Voeg een paar leveranciers toe om je eerste inkoopfactuur te maken",
+"Add a few customers to create your first sales invoice","Voeg enkele klanten toe om uw eerste verkoopfactuur te maken",
+"Add a few suppliers to create your first purchase invoice","Voeg een paar leveranciers toe om uw eerste inkoopfactuur te maken",
 "Add a filter","Filter toevoegen",
 "Add a remark","Opmerking toevoegen",
 "Add attachment","Bijlage toevoegen",
 "Add invoice terms","Factuurvoorwaarden toevoegen",
-"Add products or services that you buy from your suppliers","Producten of diensten toevoegen die u van uw leveranciers koopt",
+"Add products or services that you buy from your suppliers","Voeg producten of diensten toe die u van uw leveranciers inkoopt",
 "Add products or services that you sell to your customers","Voeg producten of diensten toe die u aan uw klanten verkoopt",
 "Add transfer terms","Transfervoorwaarden toevoegen",
 "Add'l Discounts","Extra Kortingen",
@@ -90,10 +90,10 @@ Amounts,Bedragen,
 "An entry is submitted only if it is submittable and is in the saved state.","Een item wordt alleen ingediend als het indienbaar is en zich in de opgeslagen status bevindt.",
 "An error occurred.","Er is een fout opgetreden.",
 "Applicable anywhere in Frappe Books","Overal toepasbaar in Frappe Books",
-"Applicable when Quick Search is open","Toepasbaar wanneer Snelzoeken is geopend",
-"Applicable when Template Builder is open","Toepasbaar wanneer Template Builder is geopend",
-"Applicable when a entry is open in the Form view or Quick Edit view","Toepasbaar wanneer een invoer geopend is in de formulierweergave of de snelbewerkingsweergave",
-"Applicable when the List View of an entry type is open","Toepasbaar wanneer de lijstweergave van een invoertype geopend is.",
+"Applicable when Quick Search is open","Van toepassing wanneer Snelzoeken is geopend",
+"Applicable when Template Builder is open","Van toepassing wanneer Template Builder is geopend",
+"Applicable when a entry is open in the Form view or Quick Edit view","Van toepassing wanneer een invoer geopend is in de formulierweergave of de snelbewerkingsweergave",
+"Applicable when the List View of an entry type is open","Van toepassing wanneer de lijstweergave van een invoertype geopend is.",
 "Application of Funds (Assets)","Toepassing van fondsen (Activa)",
 "Apply Discount After Tax","Korting toepassen na Belasting",
 "Apply and view changes made to the print template","Wijzigingen in de afdruksjabloon toepassen en bekijken",
@@ -217,8 +217,8 @@ Create,Maak,
 "Create a new company or select an existing one from your computer","Maak een nieuw bedrijf aan of selecteer een bestaand bedrijf op uw computer",
 "Create a new entry of the same type as the List View","Maak een nieuw item van hetzelfde type als de lijstweergave",
 "Create new ${0} entry?","Nieuwe ${0} invoer aanmaken?",
-"Create your first purchase invoice from the created supplier","Maak je eerste inkoopfactuur van de aangemaakte leverancier",
-"Create your first sales invoice for the created customer","Maak je eerste verkoopfactuur voor de aangemaakte klant",
+"Create your first purchase invoice from the created supplier","Maak uw eerste inkoopfactuur van de aangemaakte leverancier",
+"Create your first sales invoice for the created customer","Maak uw eerste verkoopfactuur voor de aangemaakte klant",
 Created,Aangemaakt,
 "Created By","Aangemaakt Door",
 "Creating Items and Parties","Artikelen en Partijen Aanmaken",
@@ -243,7 +243,7 @@ Customer,Klant,
 Customers,Klanten,
 Customizations,Aanpassingen,
 "Customize Form","Formulier Aanpassen",
-"Customize your invoices by adding a logo and address details","Pas je facturen aan door een logo en adresgegevens toe te voegen",
+"Customize your invoices by adding a logo and address details","Pas uw facturen aan door een logo en adresgegevens toe te voegen",
 Dashboard,Dashboard,
 Data,Data,
 "Database Error","Database Fout",
@@ -264,7 +264,7 @@ Default,Standaard,
 Defaults,Standaarden,
 Delete,Verwijder,
 "Delete ${0}?","${0} verwijderen?",
-"Delete Account","Account Account Verwijderen",
+"Delete Account","Account Verwijderen",
 "Delete Failed","Verwijderen Mislukt",
 "Delete Group","Groep Verwijderen",
 Delivered,Geleverd,
@@ -336,7 +336,7 @@ Entry,Toegang,
 "Entry No.","Toegang Nr.",
 "Entry Type","Type Invoer",
 "Entry has Grand Total ${0}. Please verify amounts.","Inschrijving heeft Totaal ${0}. Controleer bedragen.",
-Equity,Aandelen,
+Equity,"Eigen vermogen",
 Error,Fout,
 "Exchange Gain/Loss","Wisselkoerswinsten/-verliezen",
 "Exchange Rate","Wisselkoers",
@@ -466,10 +466,10 @@ Invoice,Factuur,
 "Invoice Value","Factuur Waarde",
 Invoices,Facturen,
 Is,Is,
-"Is Custom","Is Op Maat",
+"Is Custom","Is Aangepast",
 "Is Empty","Is Leeg",
 "Is Group","Is Groep",
-"Is Landscape","Is Landscape",
+"Is Landscape","Is liggend",
 "Is Not","Is Niet",
 "Is Not Empty","Is Niet Leeg",
 "Is POS Shift Open","Is POS Shift Open",
@@ -513,7 +513,7 @@ Link,Link,
 "Linked Entries","Gekoppelde Invoer",
 List,Lijst,
 "List View","Lijstweergave",
-"Load an existing company from your computer","Laad een bestaand bedrijf vanaf je computer",
+"Load an existing company from your computer","Laad een bestaand bedrijf vanaf uw computer",
 "Loading Report...","Rapport Laden...",
 "Loading instance...","Instantie Laden...",
 Loading...,Laden...,
@@ -553,7 +553,7 @@ More,Meer,
 "Movement Type","Bewegingstype",
 Name,Naam,
 Navigate,Navigeren,
-"Need ${0} Serial Numbers for Item ${1}. You have provided ${2}","Ik heb ${0} Serienummers nodig voor Artikel ${1}. Je hebt ${2}",
+"Need ${0} Serial Numbers for Item ${1}. You have provided ${2}", "Er zijn ${0} serienummers vereist voor artikel ${1}. U heeft er ${2} opgegeven"
 "Net Total","Netto Totaal",
 "New ${0}","Nieuw ${0}",
 "New ${0} ${1}","Nieuw ${0} ${1}",
@@ -561,7 +561,7 @@ Navigate,Navigeren,
 "New Company","Nieuw bedrijf",
 "New Entry","Nieuwe Invoer",
 "New Template","Nieuw Sjabloon",
-No,Neen,
+No,Nee,
 "No Display Entries Found","Geen Displaygegevens gevonden",
 "No Print Templates not found for entry type ${0}","Geen Afdruksjablonen gevonden voor invoertype ${0}",
 "No Value","Geen Waarde",
@@ -728,8 +728,8 @@ Quarterly,Driemaandelijks,
 Quarters,Kwartalen,
 "Quick Search","Snelzoeken",
 "Quick edit error: ${0} entry has no name.","Snel bewerken fout: ${0} item heeft geen naam.",
-Quote,Citaat,
-"Quote Reference","Citaat Referentie",
+Quote,Offerte,
+"Quote Reference","Offerte Referentie",
 Rate,Koers,
 "Rate (${0}) cannot be less zero.","Koers (${0}) kan niet lager zijn dan nul.",
 "Rate (${0}) has to be greater than zero","Koers (${0}) moet groter zijn dan nul",
@@ -765,7 +765,7 @@ Efficiency,Rendement,
 Reverted,Hersteld,
 Reverts,Herstellen,
 "Review Accounts","Rekeningen Nakijken",
-"Review your chart of accounts, add any account or tax heads as needed","Bekijk je rekeningoverzicht, voeg indien nodig rekening- of belastingkoppen toe",
+"Review your chart of accounts, add any account or tax heads as needed","Bekijk uw rekeningoverzicht, voeg indien nodig rekening- of belastingkoppen toe",
 "Right Index","Juiste Index",
 Role,Rol,
 "Root Type","Root Type",
@@ -821,7 +821,7 @@ Select,Selecteer,
 "Select a Display Doc to view the Template","Selecteer een Weergavedocument om het Sjabloon te bekijken",
 "Select a Template type","Selecteer een Sjabloontype",
 "Select a form type to customize","Selecteer een formuliertype om aan te passen",
-"Select a pre-defined page size, or set a custom page size for your Print Template.","Selecteer een vooraf gedefinieerde paginagrootte of stel een aangepaste paginagrootte in voor je afdruksjabloon.",
+"Select a pre-defined page size, or set a custom page size for your Print Template.","Selecteer een vooraf gedefinieerde paginagrootte of stel een aangepaste paginagrootte in voor uw afdruksjabloon.",
 "Select column","Selecteer kolom",
 "Select file","Selecteer Bestand",
 "Select folder","Selecteer Map",
@@ -845,7 +845,7 @@ Service,Service,
 "Set Print Size","Afdrukformaat Instellen",
 "Set Template Type","Type sjabloon instellen",
 "Set Up","Instellen",
-"Set Up Your Workspace","Je Werkruimte Instellen",
+"Set Up Your Workspace","Werkomgeving Instellen",
 "Set a Template value to see the Print Template","Stel een Sjabloonwaarde in om de Afdruksjabloon te zien",
 "Set an Import Type","Een invoer type instellen",
 "Set the display language.","De Weergavetaal Instellen.",
