Complete Indonesian Translation

--- a/translations/id.csv
+++ b/translations/id.csv
@@ -1,54 +1,54 @@
-${0},,
-"${0} ${1} already exists.","${0} ${1} sudah ada.",
-"${0} ${1} does not exist","${0} ${1} tidak ada.",
-"${0} ${1} has been modified after loading please reload entry.","${0} ${1} telah diubah setelah dimuat, silakan muat ulang entri.",
-"${0} ${1} is linked with existing records.","${0} ${1} terhubung dengan catatan yang sudah ada.",
-"${0} account not set in Inventory Settings.","Akun ${0} belum disetel di Pengaturan Inventaris.",
-"${0} already applied.","${0} sudah diterapkan.",
-"${0} already saved",,
-"${0} already submitted",,
-"${0} cancelled",,
-"${0} cannot be cancelled",,
-"${0} cannot be deleted",,
-"${0} deleted",,
-"${0} entries failed",,
-"${0} entries imported",,
-"${0} entry failed",,
-"${0} entry imported",,
-"${0} fields selected",,
-"${0} filters applied",,
-"${0} has linked child accounts.","${0} memiliki akun anak yang terhubung.",
-"${0} of type ${1} does not exist",,
-"${0} only has ${1} points",,
-"${0} out of ${1}",,
-"${0} party ${1} is different from ${2}",,
-"${0} quantity ${1} added.","${0} sejumlah ${1} ditambahkan.",
-"${0} quantity 1 added.","${0} sejumlah 1 ditambahkan.",
-"${0} row added.","${0} baris ditambahkan.",
-"${0} rows",,
-"${0} rows added.","${0} baris ditambahkan.",
-"${0} saved",,
-"${0} shortcuts","${0} pintasan",
-"${0} stored at ${1}","${0} disimpan di ${1}",
-"${0} submitted","${0} dikirim",
-"${0} value ${1} does not exist.","Nilai ${0} ${1} tidak ada.",
-0%," 0%",
-03-23-2022," 23-03-2022",
-03/23/2022," 23/03/2022",
-"1 filter applied","1 filter diterapkan",
-2022-03-23," 2022-03-23",
-"23 Mar, 2022","23 Mar 2022",
-23-03-2022," 23-03-2022",
-23.03.2022," 23.03.2022",
-23/03/2022," 23/03/2022",
-9888900000," 9888900000",
-"A submittable entry is deleted only if it is in the cancelled state.","Entri yang dapat dikirim hanya dapat dihapus jika dalam status dibatalkan.",
-Account," Akun",
-"Account ${0} does not exist.","Akun ${0} tidak ada.",
-"Account Entries","Entri Akun",
-"Account Name","Nama Akun",
-"Account Type","Jenis Akun",
-Accounting," Akuntansi",
+${0},${0},
+"${0} ${1} already exists."," ""${0} ${1} sudah ada.""",
+"${0} ${1} does not exist"," ""${0} ${1} tidak ada.""",
+"${0} ${1} has been modified after loading please reload entry."," ""${0} ${1} telah diubah setelah dimuat, silakan muat ulang entri.""",
+"${0} ${1} is linked with existing records."," ""${0} ${1} terhubung dengan catatan yang sudah ada.""",
+"${0} account not set in Inventory Settings."," ""Akun ${0} belum disetel di Pengaturan Inventaris.""",
+"${0} already applied."," ""${0} sudah diterapkan.""",
+"${0} already saved"," ""${0} sudah disimpan.""",
+"${0} already submitted"," ""${0} sudah dikirim.""",
+"${0} cancelled"," ""${0} dibatalkan.""",
+"${0} cannot be cancelled"," ""${0} tidak dapat dibatalkan.""",
+"${0} cannot be deleted"," ""${0} tidak dapat dihapus.""",
+"${0} deleted"," ""${0} dihapus.""",
+"${0} entries failed"," ""${0} entri gagal.""",
+"${0} entries imported"," ""${0} entri diimpor.""",
+"${0} entry failed"," ""${0} entri gagal.""",
+"${0} entry imported"," ""${0} entri diimpor.""",
+"${0} fields selected"," ""${0} bidang dipilih.""",
+"${0} filters applied"," ""${0} filter diterapkan.""",
+"${0} has linked child accounts."," ""${0} memiliki akun anak yang terhubung.""",
+"${0} of type ${1} does not exist"," ""${0} dengan jenis ${1} tidak ada.""",
+"${0} only has ${1} points"," ""${0} hanya memiliki ${1} poin.""",
+"${0} out of ${1}"," ""${0} dari ${1}.""",
+"${0} party ${1} is different from ${2}"," ""${0} pihak ${1} berbeda dari ${2}.""",
+"${0} quantity ${1} added."," ""${0} sejumlah ${1} ditambahkan.""",
+"${0} quantity 1 added."," ""${0} sejumlah 1 ditambahkan.""",
+"${0} row added."," ""${0} baris ditambahkan.""",
+"${0} rows"," ""${0} baris.""",
+"${0} rows added."," ""${0} baris ditambahkan.""",
+"${0} saved"," ""${0} disimpan.""",
+"${0} shortcuts"," ""${0} pintasan.""",
+"${0} stored at ${1}"," ""${0} disimpan di ${1}.""",
+"${0} submitted"," ""${0} dikirim.""",
+"${0} value ${1} does not exist."," ""Nilai ${0} ${1} tidak ada.""",
+0%," ""0%""",
+03-23-2022," ""23-03-2022""",
+03/23/2022," ""23/03/2022""",
+"1 filter applied"," ""1 filter diterapkan.""",
+2022-03-23," ""2022-03-23""",
+"23 Mar, 2022"," ""23 Mar 2022""",
+23-03-2022," ""23-03-2022""",
+23.03.2022," ""23.03.2022""",
+23/03/2022," ""23/03/2022""",
+9888900000," ""9888900000""",
+"A submittable entry is deleted only if it is in the cancelled state."," ""Entri yang dapat dikirim hanya dapat dihapus jika dalam status dibatalkan.""",
+Account," ""Akun""",
+"Account ${0} does not exist."," ""Akun ${0} tidak ada.""",
+"Account Entries"," ""Entri Akun.""",
+"Account Name"," ""Nama Akun.""",
+"Account Type"," ""Jenis Akun.""",
+Accounting,Akuntansi,
 "Accounting Entries","Entri Akuntansi",
 "Accounting Ledger Entry","Entri Buku Besar Akuntansi",
 "Accounting Settings","Pengaturan Akuntansi",
@@ -56,22 +56,22 @@ Accounts," Akun",
 "Accounts Payable","Hutang Dagang",
 "Accounts Receivable","Piutang Dagang",
 "Accumulated Depreciation","Akumulasi Penyusutan",
-Action," Tindakan",
-Active," Aktif",
+Action,Tindakan,
+Active,Aktif,
 "Add Account","Tambah Akun",
 "Add Customers","Tambah Pelanggan",
 "Add Group","Tambah Grup",
 "Add Items","Tambah Item",
 "Add Row","Tambah Baris",
-"Add Suppliers","Tambah Pemasok",
+"Add Suppliers","Tambah Supplier",
 "Add Taxes","Tambah Pajak",
 "Add a few customers to create your first sales invoice","Tambahkan beberapa pelanggan untuk membuat faktur penjualan pertama Anda",
-"Add a few suppliers to create your first purchase invoice","Tambahkan beberapa pemasok untuk membuat faktur pembelian pertama Anda",
+"Add a few suppliers to create your first purchase invoice","Tambahkan beberapa supplier untuk membuat faktur pembelian pertama Anda",
 "Add a filter","Tambahkan filter",
 "Add a remark","Tambahkan keterangan",
 "Add attachment","Tambahkan lampiran",
 "Add invoice terms","Tambahkan syarat faktur",
-"Add products or services that you buy from your suppliers","Tambahkan produk atau layanan yang Anda beli dari pemasok Anda",
+"Add products or services that you buy from your suppliers","Tambahkan produk atau layanan yang Anda beli dari supplier Anda",
 "Add products or services that you sell to your customers","Tambahkan produk atau layanan yang Anda jual kepada pelanggan Anda",
 "Add transfer terms","Tambahkan syarat transfer",
 "Add'l Discounts","Diskon tambahan",
@@ -248,7 +248,7 @@ Create,Buat,
 "Create a new company or select an existing one from your computer","Buat perusahaan baru atau pilih yang sudah ada dari komputer Anda",
 "Create a new entry of the same type as the List View","Buat entri baru dengan jenis yang sama seperti Tampilan Daftar",
 "Create new ${0} entry?","Buat entri ${0} baru?",
-"Create your first purchase invoice from the created supplier","Buat faktur pembelian pertama Anda dari pemasok yang dibuat",
+"Create your first purchase invoice from the created supplier","Buat faktur pembelian pertama Anda dari supplier yang dibuat",
 "Create your first sales invoice for the created customer","Buat faktur penjualan pertama Anda untuk pelanggan yang dibuat",
 Created,Dibuat,
 "Created By","Dibuat Oleh",
@@ -1074,9 +1074,9 @@ Submit,Kirim,
 "Submit entries?","Ajukan entri?",
 Submitted,Diajukan,
 Success,Berhasil,
-Supplier,Pemasok,
-"Supplier Created","Pemasok Dibuat",
-Suppliers,Pemasok,
+Supplier,Supplier,
+"Supplier Created","Supplier Dibuat",
+Suppliers,Supplier,
 Symbol,Simbol,
 System,Sistem,
 "System Settings","Pengaturan Sistem",
