Complete Indonesian Translation

--- a/translations/id.csv
+++ b/translations/id.csv
@@ -252,7 +252,7 @@ Create,Buat,
 "Create your first sales invoice for the created customer","Buat faktur penjualan pertama Anda untuk pelanggan yang dibuat",
 Created,Dibuat,
 "Created By","Dibuat Oleh",
-"Creating Items and Parties",,
+"Creating Items and Parties","Membuat Item dan Pihak",
 "Creating Journal Entries","Membuat Entri Jurnal",
 "Creating Purchase Invoices","Membuat Faktur Pembelian",
 Credit,Kredit,
@@ -314,7 +314,7 @@ Disabled,Dinonaktifkan,
 "Discount Account","Akun Diskon",
 "Discount Account is not set.","Akun Diskon belum diatur.",
 "Discount Amount","Jumlah Diskon",
-"Discount Amount (${0}) cannot be greated than Amount (${1}).",,
+"Discount Amount (${0}) cannot be greated than Amount (${1}).","Jumlah Diskon (${0}) tidak boleh lebih besar dari Jumlah (${1}).",
 "Discount Percent","Persentase Diskon",
 "Discount Percent (${0}) cannot be greater than 100.","Persentase Diskon (${0}) tidak boleh lebih dari 100.",
 "Discount Percentage","Persentase Diskon",
@@ -455,8 +455,8 @@ From,Dari,
 "Furnitures and Fixtures","Perabot dan Perlengkapan",
 GST,GST,
 "GSTIN No.","Nomor GSTIN",
-GSTR1,,
-GSTR2,,
+GSTR1,GSTR1,
+GSTR2,GSTR2,
 "Gain/Loss on Asset Disposal","Keuntungan/Kerugian atas Pelepasan Aset",
 General,Umum,
 "General Ledger","Buku Besar",
@@ -468,7 +468,7 @@ Gram,Gram,
 "Greater Than","Lebih Besar Dari",
 Green,Hijau,
 "Group By","Kelompokkan Berdasarkan",
-HSN/SAC,,
+HSN/SAC,HSN/SAC,
 "HSN/SAC Code","Kode HSN/SAC",
 "Half Yearly","Setengah Tahunan",
 "Half Years","Setengah Tahun",
@@ -1196,7 +1196,7 @@ Used,Digunakan,
 "User Remark","Catatan Pengguna",
 "Utility Expenses","Biaya Utilitas",
 "Valid From","Berlaku Dari",
-"Valid From Date should be greather than Pricing Rule's Valid From Date.",,
+"Valid From Date should be greather than Pricing Rule's Valid From Date.","Tanggal Berlaku harus lebih besar dari Tanggal Berlaku Aturan Harga.",
 "Valid From Date should be less than Valid To Date.","Tanggal Berlaku Dari harus lebih kecil dari Tanggal Berlaku Hingga.",
 "Valid To","Berlaku Hingga",
 "Valid To Date should be greater than Valid From Date.","Tanggal Berlaku Hingga harus lebih besar dari Tanggal Berlaku Dari.",
