fix: correct labels and return invoice amount in POS

--- a/translations/id.csv
+++ b/translations/id.csv
@@ -1217,7 +1217,7 @@ View,Lihat,
 "View Unpaid Invoices","Lihat Faktur yang Belum Dibayar",
 "View linked entries","Lihat entri yang terhubung",
 We,Kami,
-"Weigth Enabled Barcode","Barcode dengan Berat Diaktifkan",
+"Weight Enabled Barcode","Barcode dengan Berat Diaktifkan",
 "Welcome to Frappe Books","Selamat datang di Frappe Books",
 "When linking documents, if no match is found and filtering is in effect, allow to disable filters.","Saat menautkan dokumen, jika tidak ada kecocokan ditemukan dan penyaringan aktif, izinkan untuk menonaktifkan filter.",
 "Width (in cm)","Lebar (dalam cm)",
