--- a/translations/zh-Hant.csv
+++ b/translations/zh-Hant.csv
@@ -1217,7 +1217,7 @@ View,檢視,
 "View Unpaid Invoices",檢視未支付的發票,
 "View linked entries",檢視連結條目,
 We,我們,
-"Weigth Enabled Barcode",,
+"Weight Enabled Barcode",,
 "Welcome to Frappe Books","歡迎使用 Frappe Books",
 "When linking documents, if no match is found and filtering is in effect, allow to disable filters.",,
 "Width (in cm)",寬度（公分）,
