Improve Arabic translations for various terms and phrases in ar.csv

--- a/translations/ar.csv
+++ b/translations/ar.csv
@@ -120,35 +120,35 @@ Address,العنوان,
 "Bank Entry","ادخالات البنوك",
 "Bank Name","اسم البنك",
 "Bank Overdraft Account","حساب مصرفي السحب على المكشوف",
-Barcode," الباركود",
-"Base Grand Total"," اجمالي المبلغ  ",
-"Based On","على اساس",
-Batch,,
-"Batch not set for row ${0}.",,
-"Batch set for row ${0}.",,
-"Bill Created","الفاتورة أنشأت",
-Billing,"عملية الفوترة",
-Black,أسود,
-Blue,ازرق,
-Both,كلاهما,
-"Both From and To Location cannot be undefined",,
-Buildings,المباني,
-Cancel,إلغاء,
-"Cancel ${0}?",,
-"Cancel or Delete an entry.",,
-Cancelled,ملغاة,
-"Cannot Commit Error",,
-"Cannot Delete",,
-"Cannot Delete Account",,
-"Cannot Export",,
-"Cannot Import",,
-"Cannot Open File",,
-"Cannot cancel ${0} ${1} because of the following ${2}: ${3}",,
-"Cannot cancel ${0} because of the following ${1}: ${2}",,
-"Cannot delete ${0} ""${1}"" because of linked entries.",,
-"Cannot open file",,
-"Cannot perform operation.",,
-"Cannot read file",,
+"Barcode","الباركود",
+"Base Grand Total","إجمالي المبلغ الأساسي",
+"Based On","استنادًا إلى",
+"Batch","دفعة",
+"Batch not set for row ${0}.","لم يتم تعيين الدفعة للصف ${0}.",
+"Batch set for row ${0}.","تم تعيين الدفعة للصف ${0}.",
+"Bill Created","تم إنشاء الفاتورة",
+"Billing","الفوترة",
+"Black","أسود",
+"Blue","أزرق",
+"Both","كلاهما",
+"Both From and To Location cannot be undefined","لا يمكن أن يكون كل من موقع الإرسال والاستلام غير محدد",
+"Buildings","المباني",
+"Cancel","إلغاء",
+"Cancel ${0}?","إلغاء ${0}؟",
+"Cancel or Delete an entry.","إلغاء أو حذف إدخال.",
+"Cancelled","ملغاة",
+"Cannot Commit Error","لا يمكن تنفيذ الالتزام (خطأ)",
+"Cannot Delete","لا يمكن الحذف",
+"Cannot Delete Account","لا يمكن حذف الحساب",
+"Cannot Export","لا يمكن التصدير",
+"Cannot Import","لا يمكن الاستيراد",
+"Cannot Open File","لا يمكن فتح الملف",
+"Cannot cancel ${0} ${1} because of the following ${2}: ${3}","لا يمكن إلغاء ${0} ${1} بسبب ${2} التالي: ${3}",
+"Cannot cancel ${0} because of the following ${1}: ${2}","لا يمكن إلغاء ${0} بسبب ${1} التالي: ${2}",
+"Cannot delete ${0} \"${1}\" because of linked entries.","لا يمكن حذف ${0} \"${1}\" بسبب إدخالات مرتبطة.",
+"Cannot open file","لا يمكن فتح الملف",
+"Cannot perform operation.","لا يمكن تنفيذ العملية.",
+"Cannot read file","لا يمكن قراءة الملف",
 "Capital Equipments","معدات رأس المال",
 "Capital Stock","رأس المال",
 Cash,نقد,
@@ -765,7 +765,7 @@ Purchase,شراء,
 "Ref. Date","المرجع. التاريخ",
 "Ref. Name","المرجع. الاسم",
 "Ref. Type","المرجع. النوع",
-Reference,,
+"Reference","مرجع",
 "Reference Date","تاريخ المرجع",
 "Reference Number","الرقم المرجعي",
 "Reference Type","نوع المرجع",
@@ -1076,3 +1076,14 @@ Transfer,تحويل,
 "in Batch ${0}","في الدفعة ${0}",
 "john@doe.com","john@doe.com",
 "to apply changes","لتطبيق التغييرات",
+"Close Quick Search","إغلاق البحث السريع",
+"Applicable when POS is open","ينطبق عند فتح نقطة البيع",
+"Toggle between Grid and List view","التبديل بين عرض الشبكة والقائمة",
+"Open Sales Invoice List","فتح قائمة فواتير المبيعات",
+"Set Loyalty Program","تعيين برنامج الولاء",
+"Set Coupon Code","تعيين رمز القسيمة",
+"Set Price List","تعيين قائمة الأسعار",
+"Open Saved or Submitted Invoice List.","فتح قائمة الفواتير المحفوظة أو المسجّلة.",
+"If any entry form is open, save the details. Otherwise, save the invoice.","إذا كان نموذج الإدخال مفتوحًا، احفظ التفاصيل. وإلا، فاحفظ الفاتورة.",
+"Create Payment.","إنشاء دفعة.",
+"If any entry form is open, your entry will be canceled. Otherwise the selected items will be removed.","إذا كان نموذج الإدخال مفتوحًا، فسيتم إلغاء الإدخال. وإلا فستُزال العناصر المحددة.",
