--- a/translations/ar.csv
+++ b/translations/ar.csv
@@ -1087,3 +1087,6 @@ Transfer,تحويل,
 "If any entry form is open, save the details. Otherwise, save the invoice.","إذا كان نموذج الإدخال مفتوحًا، احفظ التفاصيل. وإلا، فاحفظ الفاتورة.",
 "Create Payment.","إنشاء دفعة.",
 "If any entry form is open, your entry will be canceled. Otherwise the selected items will be removed.","إذا كان نموذج الإدخال مفتوحًا، فسيتم إلغاء الإدخال. وإلا فستُزال العناصر المحددة.",
+"Open POS Shift","فتح مناوبة نقطة البيع",
+"Close POS Shift","إغلاق مناوبة نقطة البيع",
+"Cash In Denominations","النقد بالفئات",
