localization: update labels and translations for various components in Arabic

--- a/translations/ar.csv
+++ b/translations/ar.csv
@@ -750,11 +750,11 @@ Purchase,شراء,
 "Quick edit error: ${0} entry has no name.","خطأ في التحرير السريع: الإدخال ${0} ليس له اسم.",
 "Quote","عرض سعر",
 "Quote Reference","مرجع عرض السعر",
-"Rate","معدل",
-"Rate (${0}) cannot be less zero.","لا يمكن أن يكون المعدل (${0}) أقل من صفر.",
-"Rate (${0}) has to be greater than zero","يجب أن يكون المعدل (${0}) أكبر من صفر",
-"Rate can't be negative.","لا يمكن أن يكون المعدل سالبًا",
-"Rate needs to be set","يجب تعيين المعدل",
+"Rate","سعر",
+"Rate (${0}) cannot be less zero.","لا يمكن أن يكون السعر (${0}) أقل من صفر.",
+"Rate (${0}) has to be greater than zero","يجب أن يكون السعر (${0}) أكبر من صفر",
+"Rate can't be negative.","لا يمكن أن يكون السعر سالبًا",
+"Rate needs to be set","يجب تعيين السعر",
 "Raw Value: ${0}","القيمة الخام: ${0}",
 "Receivable","مدين",
 "Receive","استلام",
@@ -1019,7 +1019,7 @@ Total,اجمالى,
 "Total Income (Credit)","اجمالى الدخل(دائن)",
 "Total Liability (Credit)","اجمالى الالتزامات(دائن)",
 "Total Profit","اجمالى الربح",
-"Total Quantity",,
+"Total Quantity","إجمالي الكمية",
 "Total Spending","إجمالي الإنفاق",
 "Track Inventory",,
 Transfer,تحويل,
@@ -1090,3 +1090,12 @@ Transfer,تحويل,
 "Open POS Shift","فتح مناوبة نقطة البيع",
 "Close POS Shift","إغلاق مناوبة نقطة البيع",
 "Cash In Denominations","النقد بالفئات",
+"Search Item (Name or Barcode)","ابحث عن صنف (بالاسم أو الباركود)",
+"Sales Invoice List","قائمة فواتير المبيعات",
+"Loyalty Program","برنامج الولاء",
+"Closing Cash","الاغلاق النقدي",
+"Closing Amounts","مبالغ الاغلاق",
+"Qty","الكمية",
+"Held","معلّقة",
+"Grid View","عرض الشبكة",
+"Buy","شراء",
