localization: add Arabic translation for quick quantity shortcut and update relevant components to emit selected row events

--- a/translations/ar.csv
+++ b/translations/ar.csv
@@ -1099,3 +1099,4 @@ Transfer,تحويل,
 "Held","معلّقة",
 "Grid View","عرض الشبكة",
 "Buy","شراء",
+"Hold Q and type digits to set selected item quantity","استمر بالضغط على Q ثم اكتب الأرقام لتعيين كمية الصنف المحدد",
